feat: medium type fix

--- a/src/app.html
+++ b/src/app.html
@@ -6,11 +6,11 @@
 		<link rel="icon" href="/favicon.png" />
 
 		<title>Dinçer Tekin | Cybersecurity & Software Engineer</title>
-        <meta name="description" content="Portfolio of Dinçer Tekin: Cybersecurity & Software Engineer, and YouTube Content Creator.">
+        <meta name="description" content="Cybersecurity & Software Engineer, and YouTube Content Creator.">
 
         <meta property="og:type" content="website">
         <meta property="og:title" content="Dinçer Tekin">
-        <meta property="og:description" content="Cybersecurity & Software Engineering Portfolio">
+        <meta property="og:description" content="Cybersecurity & Software Engineer">
         <meta property="og:image" content="/og-image.jpg">
 
         <script type="application/ld+json">
@@ -18,7 +18,7 @@
           "@context": "https://schema.org",
           "@type": "Person",
           "name": "Dinçer Tekin",
-          "jobTitle": "Security & Software Engineer",
+          "jobTitle": "Cybersecurity & Software Engineer",
           "url": "https://dincertekin.com",
           "sameAs": [
             "https://github.com/dincertekin",
