--- a/src/app.html
+++ b/src/app.html
@@ -1,36 +1,38 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="icon" href="/favicon.png" />
-
-		<title>Dinçer Tekin | Cybersecurity & Software Engineer</title>
-        <meta name="description" content="Cybersecurity & Software Engineer, and YouTube Content Creator.">
-
-        <meta property="og:type" content="website">
-        <meta property="og:title" content="Dinçer Tekin">
-        <meta property="og:description" content="Cybersecurity & Software Engineer">
-        <meta property="og:image" content="/og-image.jpg">
-
-        <script type="application/ld+json">
-        {
-          "@context": "https://schema.org",
-          "@type": "Person",
-          "name": "Dinçer Tekin",
-          "jobTitle": "Cybersecurity & Software Engineer",
-          "url": "https://dincertekin.com",
-          "sameAs": [
-            "https://github.com/dincertekin",
-            "https://youtube.com/@dincertekin",
-            "https://linkedin.com/in/dincertekin"
-          ]
-        }
-        </script>
-
-		%sveltekit.head%
-	</head>
-	<body class="bg-[#0b0b0b]" data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="/favicon.png" />
+    <title>Dinçer Tekin | Cybersecurity & Software Engineer</title>
+    <meta
+      name="description"
+      content="Cybersecurity & Software Engineer, and YouTube Content Creator."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Dinçer Tekin" />
+    <meta
+      property="og:description"
+      content="Cybersecurity & Software Engineer"
+    />
+    <meta property="og:image" content="/og-image.jpg" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Dinçer Tekin",
+        "jobTitle": "Cybersecurity & Software Engineer",
+        "url": "https://dincertekin.com",
+        "sameAs": [
+          "https://github.com/dincertekin",
+          "https://youtube.com/@dincertekin",
+          "https://linkedin.com/in/dincertekin"
+        ]
+      }
+    </script>
+    %sveltekit.head%
+  </head>
+  <body class="bg-[#0b0b0b]" data-sveltekit-preload-data="hover">
+    <div style="display: contents">%sveltekit.body%</div>
+  </body>
 </html>
